dataset1235/2025-2/805158916/users/2200760145/executions/1584167357_1026882843.log
== SUBMISSION (2025-08-27 14:45:36)
-- CODE: 
raio = float(input())
area = math.pi * (raio ** 2)
print(area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * (raio ** 2)
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * (raio ** 2)
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * (raio ** 2)
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * (raio ** 2)
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * (raio ** 2)
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * (raio ** 2)
           ^^^^
NameError: name 'math' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:27:14)
-- CODE: 
raio = float(input())
area = math.pi * raio**2
print(round(area, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * raio**2
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * raio**2
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * raio**2
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * raio**2
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * raio**2
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * raio**2
           ^^^^
NameError: name 'math' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:44:51)
-- CODE: 
import math
raio = float(input())
area = math.pi * (raio ** 2)
print (area)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
0.007853981633974483
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
32.169908772759484
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
38.48451000647496
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
452.3893421169302
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
221.6707776372958
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
346.3605900582747
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:39:25)
-- CODE: 
numero = float(input())
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
0.0025000000000000005
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
10.240000000000002
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
12.25
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
144.0
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
70.56
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
110.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:45:15)
-- CODE: 
import math
raio = float(input())
area = math.pi * (raio ** 2)
print (area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
0.007853981633974483
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
32.169908772759484
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
38.48451000647496
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
452.3893421169302
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
221.6707776372958
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
346.3605900582747
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:37:17)
-- CODE: 
raio = float(input())
area = math.pi * raio**2
print(round(area, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * raio**2
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * raio**2
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * raio**2
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * raio**2
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * raio**2
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * raio**2
           ^^^^
NameError: name 'math' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:27:09)
-- CODE: 
raio = float(input())
area = math.pi * raio**2
print(round(area, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * raio**2
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * raio**2
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * raio**2
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * raio**2
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * raio**2
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * raio**2
           ^^^^
NameError: name 'math' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:45:09)
-- CODE: 
import math
raio = float(input())
area = math.pi * (raio ** 2)
print (area)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
0.007853981633974483
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
32.169908772759484
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
38.48451000647496
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
452.3893421169302
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
221.6707776372958
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
346.3605900582747
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:54:53)
-- CODE: 
import math
raio = float(input())
area = math.pi * (raio ** 2)
print(area)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
0.007853981633974483
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
32.169908772759484
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
38.48451000647496
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
452.3893421169302
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
221.6707776372958
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
346.3605900582747
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:56:42)
-- CODE: 
import math
raio = float(input())
area = math.pi * (raio ** 2)
print(round(area, 4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
File "XXXX", line 4
    print(round(area, 4)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
File "XXXX", line 4
    print(round(area, 4)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
File "XXXX", line 4
    print(round(area, 4)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
File "XXXX", line 4
    print(round(area, 4)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
File "XXXX", line 4
    print(round(area, 4)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
File "XXXX", line 4
    print(round(area, 4)
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:52:25)
-- CODE: 
import math
raio = float(input())
area = math.pi * (raio ** 2)
print(area)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
0.007853981633974483
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
32.169908772759484
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
38.48451000647496
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
452.3893421169302
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
221.6707776372958
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
346.3605900582747
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:50:03)
-- CODE: 
import math
raio = float(input())
area = math.pi * (raio ** 2)
print(area)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
0.007853981633974483
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
32.169908772759484
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
38.48451000647496
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
452.3893421169302
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
221.6707776372958
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
346.3605900582747
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:46:22)
-- CODE: 
import math
raio = float(input())
area = math.pi * (raio ** 2)
print(area)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
0.007853981633974483
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
32.169908772759484
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
38.48451000647496
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
452.3893421169302
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
221.6707776372958
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
346.3605900582747
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:50:09)
-- CODE: 
import math
raio = float(input())
area = math.pi * (raio ** 2)
print(area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
0.007853981633974483
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
32.169908772759484
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
38.48451000647496
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
452.3893421169302
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
221.6707776372958
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
346.3605900582747
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:50:33)
-- CODE: 
import math
raio = float(input())
area = math.pi * (raio ** 2)
print(area)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
0.007853981633974483
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
32.169908772759484
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
38.48451000647496
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
452.3893421169302
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
221.6707776372958
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
346.3605900582747
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:49:36)
-- CODE: 
import math
raio = float(input())
area = math.pi * (raio ** 2)
print(area)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
0.007853981633974483
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
32.169908772759484
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
38.48451000647496
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
452.3893421169302
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
221.6707776372958
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
346.3605900582747
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:39:26)
-- CODE: 
numero = float(input())
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
0.0025000000000000005
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
10.240000000000002
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
12.25
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
144.0
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
70.56
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
110.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:45:22)
-- CODE: 
import math
raio = float(input())
area = math.pi * (raio ** 2)
print(area)
-- EXECUTION TIME: 
0.0133333
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
0.007853981633974483
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
32.169908772759484
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
38.48451000647496
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
452.3893421169302
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
221.6707776372958
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
346.3605900582747
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:50:32)
-- CODE: 
import math
raio = float(input())
area = math.pi * (raio ** 2)
print(area)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
0.007853981633974483
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
32.169908772759484
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
38.48451000647496
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
452.3893421169302
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
221.6707776372958
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
346.3605900582747
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:50:34)
-- CODE: 
import math
raio = float(input())
area = math.pi * (raio ** 2)
print(area)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
0.007853981633974483
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
32.169908772759484
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
38.48451000647496
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
452.3893421169302
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
221.6707776372958
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
346.3605900582747
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:44:51)
-- CODE: 
import math
raio = float(input())
area = math.pi * (raio ** 2)
print (area)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
0.007853981633974483
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
32.169908772759484
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
38.48451000647496
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
452.3893421169302
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
221.6707776372958
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
346.3605900582747
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:27:03)
-- CODE: 
raio = float(input())
area = math.pi * raio**2
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * raio**2
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * raio**2
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * raio**2
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * raio**2
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * raio**2
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * raio**2
           ^^^^
NameError: name 'math' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:50:04)
-- CODE: 
import math
raio = float(input())
area = math.pi * (raio ** 2)
print(area)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
0.007853981633974483
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
32.169908772759484
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
38.48451000647496
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
452.3893421169302
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
221.6707776372958
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
346.3605900582747
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:54:53)
-- CODE: 
import math
raio = float(input())
area = math.pi * (raio ** 2)
print(area)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
0.007853981633974483
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
32.169908772759484
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
38.48451000647496
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
452.3893421169302
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
221.6707776372958
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
346.3605900582747
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:50:15)
-- CODE: 
import math
raio = float(input())
area = math.pi * (raio ** 2)
print(area)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
0.007853981633974483
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
32.169908772759484
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
38.48451000647496
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
452.3893421169302
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
221.6707776372958
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
346.3605900582747
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:33:27)
-- CODE: 
raio = float(input())
area = math.pi * raio**2
print(round(area, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * raio**2
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * raio**2
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * raio**2
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * raio**2
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * raio**2
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * raio**2
           ^^^^
NameError: name 'math' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:27:08)
-- CODE: 
raio = float(input())
area = math.pi * raio**2
print(round(area, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * raio**2
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * raio**2
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * raio**2
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * raio**2
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * raio**2
           ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = math.pi * raio**2
           ^^^^
NameError: name 'math' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:56:53)
-- CODE: 
import math
raio = float(input())
area = math.pi * (raio ** 2)
print(round(area, 4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
0.0079
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
32.1699
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
38.4845
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
452.3893
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
221.6708
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
346.3606
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:45:24)
-- CODE: 
import math
raio = float(input())
area = math.pi * (raio ** 2)
print(area)
-- EXECUTION TIME: 
0.0133333
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
0.007853981633974483
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
32.169908772759484
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
38.48451000647496
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
452.3893421169302
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
221.6707776372958
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
346.3605900582747
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:39:03)
-- CODE: 
numero = float(input())
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
0.0025000000000000005
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
10.240000000000002
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
12.25
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
144.0
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
70.56
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
110.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:44:49)
-- CODE: 
import math
raio = float(input())
area = math.pi * (raio ** 2)
print (area)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
0.007853981633974483
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
32.169908772759484
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
38.48451000647496
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
452.3893421169302
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
221.6707776372958
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
346.3605900582747
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:45:10)
-- CODE: 
import math
raio = float(input())
area = math.pi * (raio ** 2)
print (area)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
0.007853981633974483
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
32.169908772759484
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
38.48451000647496
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
452.3893421169302
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
221.6707776372958
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
346.3605900582747
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
